# vibe-insights

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
.claude-plugin/: plugin.json
docs/: checklist.md  privacy-and-sources.md
docs/superpowers/plans/: 2026-06-01-vibe-insights-generalization.md
docs/superpowers/specs/: 2026-05-24-vibe-insights-phase2-design.md  2026-06-01-vibe-insights-generalization-design.md
skills/vibe-insights/: SKILL.md
src/vibe_insights/: __init__.py  analytics.py  cclogs.py  cli.py  config.py  decisions.py  merge.py  records.py  report.py  scan.py  story.py  tagging.py
tests/: test_analytics.py  test_cli.py  test_config.py  test_decisions.py  test_ingest.py  test_merge.py  test_records.py  test_report.py  test_sample.py  test_scan.py  test_story.py  test_tagging.py
